--- a/02_usuarioSenha.html
+++ b/02_usuarioSenha.html
@@ -6,10 +6,14 @@
     */
 
     //Entrada
-
+    let name = prompt(`digite seu nome de usuário`).trim()
+    let password = prompt(`digite sua senha`).trim()
 
     //Processamento
-
+    while (name == password) {
+        let name = prompt(`digite seu nome de usuário`).trim();
+    let password = prompt(`digite sua senha`).trim();
+    }
 
     //Saída
 
